kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
  labels: { app: nginx }
spec:
  selector: { app: nginx }
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
