kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # если у тебя установлен nginx-ingress-controller — оставь строку ниже;
  # если другой контроллер (traefik/haproxy) — удали или поставь нужный класс
  ingressClassName: nginx
  rules:
    - host: ${APP_HOST}   # только домен, без https:// и без /
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-nginx-service
                port:
                  number: 80
# Если у тебя есть TLS-секрет, раскомментируй блок ниже и укажи имя секрета
  tls:
    - hosts:
        - ${APP_HOST}
      secretName: arlanito-tls
